# aurora-wall

./: AGENTS.md  Cargo.toml  README.md
crates/backend-api/: Cargo.toml
crates/backend-api/src/: lib.rs
crates/backend-desktop/: Cargo.toml
crates/backend-desktop/src/: lib.rs
crates/backend-hyprland/: Cargo.toml
crates/backend-hyprland/src/: lib.rs
crates/backend-wayland/: Cargo.toml
crates/backend-wayland/src/: lib.rs
crates/backend-x11/: Cargo.toml
crates/backend-x11/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/media-image/: Cargo.toml
crates/media-image/src/: lib.rs
crates/media-video/: Cargo.toml
crates/media-video/src/: lib.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
examples/: config.conf
packaging/: PKGBUILD  aurora-wall.service
