[package]
name = "aurora-wall-daemon"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
aurora-wall-backend-api = { path = "../backend-api" }
aurora-wall-backend-hyprland = { path = "../backend-hyprland" }
aurora-wall-config = { path = "../config" }
aurora-wall-state = { path = "../state" }
